<resources>
    <string name="app_name">Projet mobile</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="my_app">Application</string>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="courses">Courses</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="app_logo">App Logo</string>
    <string name="settings">Settings</string>
    <string name="add_new_task">Add New Task</string>
    <string name="manage_teachers">Manage Teachers</string>
    <string name="clear_all_courses">Clear All Courses</string>
    <string name="search">Search</string>
    <string name="add_course">Add Course</string>
    <string name="nom_de_la_t_che">Task Name</string>
    <string name="advanced_mobile_development">Advanced Mobile Development</string>
    <string name="dr_jane_smith">Dr. Jane Smith</string>
    <string name="teacher_email">Teacher Email</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="nom_de_l_enseignant">Teacher Name</string>
    <string name="email_de_l_enseignant">Teacher Email</string>
    <string name="search_courses">Search Courses</string>
    <string name="no_courses_available">No courses available.</string>
    <string name="add_new_course">Add new course</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_password">New Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dont_have_account_sign_up">Dont have account ? sign up</string>
    <string name="course_name">Course Name</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="coefficient">Coefficient</string>
    <string name="enter_coefficient">Enter Coefficient</string>
    <string name="coefficient_0_75">Coefficient: 0.75</string>
    <string name="edit_course">Edit Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="select_language">Select Language</string>
    <string name="nameteacher">nameteacher</string>
    <string name="Date_And_Time">Date And Time</string>
    <string name="select_date">Select Date\n</string>
    <string name="pick_date">Pick Date\n</string>
    <string name="select_time">Select Time</string>
    <string name="pick_time">Pick Time\n</string>
</resources>