<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <!-- Course Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="?attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCourseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_name"
            android:background="@color/white"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Teacher Selector -->
    <TextView
        android:id="@+id/textViewTeacherSelector"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:text="@string/select_teacher"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerTeachers"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/spinner_background" />

    <!-- Coefficient -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="?attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCoefficient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/coefficient"
            android:background="@color/white"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
